# orchestra-operator

./: .copilot-instructions.md  Dockerfile  README.md  justfile  orchestra.code-workspace  pyproject.toml  spec.md
config/crd/: workshop-crd.yaml
config/deploy/: operator-deployment.yaml
examples/: abc.yaml  workshop-api-example.json  workshop-example.yaml
src/: main.py
src/handlers/: __init__.py  cleanup.py  workshop.py
src/resources/: __init__.py  deployment.py  ingress.py  pvc.py  service.py
src/utils/: __init__.py  time_utils.py
