[project]
name = "orchestra-operator"
version = "0.1.0"
description = "Kubernetes operator for managing RStudio workshop instances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kopf>=1.38.0",
    "kubernetes>=29.0.0",
    "kubernetes-asyncio>=29.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py313"
